tests/cases_invalid/functions/.expected
error: function parameter defined multiple times
 --> ./cases_invalid/functions/definition.shd:1:42
  |
1 | fn duplicated_param_name(a: u32, b: u32, a: i32) {
  |                          ------          ^^^^^^
  |                          |               |
  |                          |               duplicated parameter name
  |                          info: same parameter name defined here
  |

error: `func(u32, i32)` function defined multiple times
 --> ./cases_invalid/functions/not_unique.shd:5:1
  |
1 | fn func(a: u32, b: i32) {}
  | -------------------------- info: same item defined here
2 | fn func(a: u32, b: bool) {}
3 | fn func(a: u32) {}
4 | fn other_name(a: u32, b: i32) {}
5 | fn func(a: u32, b: i32) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | duplicated item
  |